<resources>
    <string name="app_name">DigimonTCG_API_Rest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options_menu_version">Versión</string>
    <string name="options_menu_about_us">Sobre Nosotros</string>
    <string name="options_how_to">Como usar la app</string>
    <string name="user_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="btn_login_login">Login</string>
    <string name="btn_login_create_acc">Create account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="radio_rookie">Novato</string>
    <string name="radio_amateur">Aficionado</string>
    <string name="radio_expert">Experto</string>
    <string name="txt_question_played">¿Que nivel crees que tienes jugando a este juego?</string>
    <string name="form_head">Formulario de ingreso</string>
    <string name="txt_hint_name">Nombre</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_username">Nombre de usuario</string>
    <string name="content_desc_digi_header">Cabecera digi API</string>
    <string name="content_desc_digi_card">Esta es la imagen de la digi carta seleccionada</string>
    <string name="digi_example_name">Agumon</string>
    <string name="digi_example_cardnumber">BT-01</string>
    <string name="content_desc_digi_favorite">Carta favorita</string>
    <string name="example1">Example Button 1</string>
    <string name="example_short_txt">aaaa</string>
    <string name="txt_color_in_float">Color</string>
    <string name="txt_lvl_in_float">Nivel</string>
    <string name="txt_playcost_in_float">Play cost</string>
    <string name="txt_evo_cost_in_float">Evo Cost</string>
    <string name="txt_rarity_in_float">Rareza</string>
    <string name="txt_dp_in_float">DP</string>
    <string name="txt_sourceeffect">Efecto de fuente</string>
    <string name="txt_maineffect">Efecto principal</string>
    <string name="img_head_main">Imagen corporativa y la de cabecera</string>
    <string name="img_more_opt">boton de opciones</string>
    <string name="text_about_us">Esta aplicación está hecha por Gastón Tomás Huete\npara IES La Senia como proyecto de final de trimestre</string>
    <string name="txt_help">Esta aplicación es tan sencilla como hacer clic\nen una carta que deseas ver y consultar su información</string>
    <string name="version">1.0</string>
    <string name="app_icon_name">Digimon TCG Companion</string>
    <string name="user_hint_txt">Usuario</string>
    <string name="pass_hint_txt">Contraseña</string>
    <string name="options_menu_moreInfo_digi">Mas información</string>
    <string name="colorbut">colorbut</string>
    <string name="go_back_butt">Boton vuelta atras</string>
    <string name="close_ses">Cerrar sesión</string>
    <string name="options_menu_exit">Salir</string>
</resources>