<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/form_head"
        android:textSize="35sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/txt_form_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_form_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_form_nombre_apellidos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryDarkColor"
        android:hint="@string/txt_hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_form_description"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="txt_hint_description"
        android:fitsSystemWindows="true"
        android:breakStrategy="balanced"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_question_played"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_played"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_rookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_rookie"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_amateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_amateur"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_expert"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="Submit"
        android:textColor="#fff" />
</LinearLayout>